# Programacion-I

Arreglos y Strings/: Calc 1 arreglo  Calc con arreglos
Funciones y Struc/: Funciones
Funciones_y_Struc/: Login_de_Usuarios.cpp
Librerias /: afore.h  calculadora en libreria
POO/: Act POO 1  Act POO 2  Software_de_conversión
Proyecto_3er_Parcial/: CMakeLists.txt  Libreria_Examen.h  main.cpp
Repasos/: Ciclo_For.cpp
T_P1_2do/: Automovil.cpp  Automovil.h  Char.cpp  Char.h  Double.cpp  Double.h  Float.cpp  Float.h  Int.cpp  Int.h  IntCell.cpp  IntCell.h  Kage.cpp  Kage.h  Ninja.cpp  Ninja.h  Persona.cpp  Persona.h  booleano.cpp  booleano.h  main.cpp  main2.cpp  mainPersona.cpp
T_P2_2do/: Jinchuriki.cpp  Kage.h  Ninja.cpp  Ninja.h  Persona.cpp  Persona.h  PoderesMagicos.cpp  PoderesMagicos.h  PowersUP.h  Sannin.cpp  Sannin.h  mainPersona.cpp
T_P2_2do/EjercicioRepaso/: BolaDeFuego.cpp  BolaDeFuego.h  CMakeLists.txt  ConfiguracionesJuego.cpp  ConfiguracionesJuego.h  Curar.cpp  Curar.h  Enemigo.cpp  Enemigo.h  Goblin.cpp  Goblin.h  Guerrero.cpp  Guerrero.h  Habilidad.cpp  Habilidad.h  Inventario.cpp  Inventario.h  Item.cpp  Item.h  Mago.cpp  Mago.h  Orco.cpp  Orco.h  Personaje.cpp  Personaje.h  PersonajeVideojuego.cpp  PersonajeVideojuego.h  main.cpp
T_P2_2do/Escritura/: Correo.cpp  Lectura.cpp  LecturaEscritura.cpp  README.md
T_P2_2do/Examen_P3_2do/: BolaDeFuego.cpp  BolaDeFuego.h  CMakeLists.txt  Curar.cpp  Curar.h  Enemigo.cpp  Enemigo.h  Entidad.cpp  Entidad.h  Habilidad.cpp  Habilidad.h  Inventario.cpp  Inventario.h  Item.cpp  Item.h  Jugador.cpp  Jugador.h  Personaje.cpp  Personaje.h  main.cpp
T_P2_2do/Herencia/: Jinchuriki.h  Kage.cpp  Ninja.h  Persona.cpp  Persona.h  PowersUP.cpp  Protagonista.cpp  Protagonista.h
T_P2_2do/Polimorfismo/: Animal.cpp  Animal.h  Avestruz.cpp  Avestruz.h  Canguro.cpp  Canguro.h  Capybara.cpp  Capybara.h  Dog.cpp  Dog.h  Gallina.cpp  Gallina.h  Pajaro.cpp  Pajaro.h  Pinguino.cpp  Pinguino.h  mainAnimal.cpp
T_P2_2do/Referencias/: CMakeLists.txt  main.cpp  znotes.txt
T_P2_2do/SFML/: main1.md  main2.md
T_P2_2do/SFML4/: CMakeLists.txt  main.cpp
T_P2_2do/heapStack/: CMakeLists.txt  Persona.cpp  Persona.h  main.cpp  znotes.txt
T_P4_2do/HG_SFML/: CMakeLists.txt  main.cpp
T_P4_2do/P4AC1/: CMakeLists.txt  main.cpp
T_P4_2do/SFML1/: main.cpp
T_P4_2do/SFML2/: main.cpp
T_P4_2do/SFML3/: CMakeLists.txt  Poligono.cpp  Poligono.h  main.cpp
T_P4_2do/SFML_EX/: CMakeLists.txt  main.cpp
T_P4_2do/SFML_HG/: main.cpp
T_P4_do/P4AC1/: CMakeLists.txt  main.cpp
T_P4_do/SFML1/: CMakeLists.txt
T_P4_do/SFML2/: CMakeLists.txt  main.cpp
T_P4_do/SFML_HG/: CMakeLists.txt
cmake/: CMakeLists.txt  EjercicioDia_1.cpp  Ejercicio_2.cpp  Ejercicio_3.cpp  Ejercicio_4.cpp  main.cpp
