cmake_minimum_required(VERSION 3.24.1)
project(Proyectos_IPV_AAST)

set(CMAKE_CXX_STANDARD 17)

add_executable(Proyectos_IPV_ASST ../Proyecto_3er_Parcial/main.cpp
        ../T_P1_2do/Int.cpp
        ../T_P1_2do/Int.cpp
        ../T_P1_2do/Int.cpp ../T_P2_2do/Persona.h ../T_P2_2do/Ninja.h ../T_P2_2do/Persona.cpp ../T_P2_2do/Ninja.cpp ../T_P2_2do/mainPersona.cpp ../T_P2_2do/Sannin.h ../T_P2_2do/Sannin.cpp ../T_P1_2do/Kage.cpp)