cmake_minimum_required(VERSION 3.24.1)
project(Proyectos_IPV_AAST)

set(CMAKE_CXX_STANDARD 17)

add_executable(Proyectos_IPV_ASST
        ../T_P2_2do/EjercicioRepaso/main.cpp
        ../T_P2_2do/EjercicioRepaso/Personaje.cpp
        ../T_P2_2do/EjercicioRepaso/Personaje.h
        ../T_P2_2do/EjercicioRepaso/Mago.cpp
        ../T_P2_2do/EjercicioRepaso/Mago.h
        ../T_P2_2do/EjercicioRepaso/Orco.cpp
        ../T_P2_2do/EjercicioRepaso/Orco.h
        ../T_P2_2do/EjercicioRepaso/PersonajeVideojuego.cpp
        ../T_P2_2do/EjercicioRepaso/PersonajeVideojuego.h
        ../T_P2_2do/EjercicioRepaso/Habilidad.cpp
        ../T_P2_2do/EjercicioRepaso/Habilidad.h
        ../T_P2_2do/EjercicioRepaso/BolaDeFuego.cpp
        ../T_P2_2do/EjercicioRepaso/BolaDeFuego.h
        ../T_P2_2do/EjercicioRepaso/ConfiguracionesJuego.cpp
        ../T_P2_2do/EjercicioRepaso/ConfiguracionesJuego.h
        ../T_P2_2do/EjercicioRepaso/Curar.cpp
        ../T_P2_2do/EjercicioRepaso/Curar.h
        ../T_P2_2do/EjercicioRepaso/Enemigo.cpp
        ../T_P2_2do/EjercicioRepaso/Enemigo.h
        ../T_P2_2do/EjercicioRepaso/Goblin.cpp
        ../T_P2_2do/EjercicioRepaso/Goblin.h
        ../T_P2_2do/EjercicioRepaso/Guerrero.cpp
        ../T_P2_2do/EjercicioRepaso/Guerrero.h
        ../T_P2_2do/EjercicioRepaso/Inventario.cpp
        ../T_P2_2do/EjercicioRepaso/Inventario.h
        ../T_P2_2do/EjercicioRepaso/Item.h
        ../T_P2_2do/EjercicioRepaso/Item.cpp
)