cmake_minimum_required(VERSION 3.24)
project(EjercicioRepaso)

set(CMAKE_CXX_STANDARD 17)

add_executable(EjercicioRepaso main.cpp PersonajeVideojuego.h PersonajeVideojuego.cpp Mago.h Mago.cpp Guerrero.cpp Enemigo.h Enemigo.cpp Goblin.h Goblin.cpp Orco.h Orco.cpp Inventario.h Inventario.cpp Habilidad.h Curar.h BolaDeFuego.cpp Curar.cpp Habilidad.cpp ConfiguracionesJuego.h ConfiguracionesJuego.cpp Personaje.h Personaje.cpp)
